src/downloads/cargo-watch/7.4.0/index.md
# Cargo Watch 7.4.0

## Release notes

<ul>
<li><a class="issue-link js-issue-link" data-error-text="Failed to load title" data-id="629931099" data-permission-text="Title is private" data-url="https://github.com/watchexec/cargo-watch/issues/147" data-hovercard-type="issue" data-hovercard-url="/watchexec/cargo-watch/issues/147/hovercard" href="https://github.com/watchexec/cargo-watch/issues/147">#147</a> (pulling in watchexec 1.13): now gitignores in subdirs are also honoured</li>
<li><a class="issue-link js-issue-link" data-error-text="Failed to load title" data-id="534294928" data-permission-text="Title is private" data-url="https://github.com/watchexec/cargo-watch/issues/137" data-hovercard-type="issue" data-hovercard-url="/watchexec/cargo-watch/issues/137/hovercard" href="https://github.com/watchexec/cargo-watch/issues/137">#137</a>: MSRV is documented now, as well as the versioning policy when bumping MSRV</li>
</ul>

## Packages

<table class="downloads">
<thead>
<tr>
<th>OS</th>
<th>Arch</th>
<th>Variant</th>
<th>Download</th>

</tr>
</thead>
<tbody>
<tr>
						<td rowspan="3">Linux</td>
						
<td rowspan="3">x86-64</td>
            
						
<td rowspan="2">glibc</td>
            
<td><a class="download" href="https://github.com/watchexec/cargo-watch/releases/download/v7.4.0/cargo-watch-v7.4.0-x86_64-unknown-linux-gnu.deb">DEB</a> (624 KB)</td>
						
</tr>
					
<tr>
						
						
						
<td><a class="download" href="https://github.com/watchexec/cargo-watch/releases/download/v7.4.0/cargo-watch-v7.4.0-x86_64-unknown-linux-gnu.tar.xz">XZ</a> (625 KB)</td>
						
</tr>
					
<tr>
						
						
						
<td rowspan="1">musl</td>
            
<td><a class="download" href="https://github.com/watchexec/cargo-watch/releases/download/v7.4.0/cargo-watch-v7.4.0-x86_64-unknown-linux-musl.tar.xz">XZ</a> (644 KB)</td>
						
</tr>
					
<tr>
						<td rowspan="2">Windows</td>
						
<td rowspan="2">x86-64</td>
            
						
<td rowspan="1">MSVC</td>
            
<td><a class="download" href="https://github.com/watchexec/cargo-watch/releases/download/v7.4.0/cargo-watch-v7.4.0-x86_64-pc-windows-msvc.zip">Zip</a> (760 KB)</td>
						
</tr>
					
<tr>
						
						
						
<td rowspan="1">MingW</td>
            
<td><a class="download" href="https://github.com/watchexec/cargo-watch/releases/download/v7.4.0/cargo-watch-v7.4.0-x86_64-pc-windows-gnu.zip">Zip</a> (793 KB)</td>
						
</tr>
					
<tr>
						<td rowspan="1">macOS</td>
						
<td rowspan="1">x86-64</td>
            
						
<td rowspan="1"></td>
            
<td><a class="download" href="https://github.com/watchexec/cargo-watch/releases/download/v7.4.0/cargo-watch-v7.4.0-x86_64-apple-darwin.tar.xz">XZ</a> (572 KB)</td>
						
</tr>
					</tbody>
</table>


View release [on GitHub](https://github.com/watchexec/cargo-watch/releases/v7.4.0).

## Checksums





>	 version released on 2020-06-04
>	|
>	this page built on 2022-02-19 at 03:29
>	| generator v0.0.2
>	| [json metadata](meta.json)

