src/downloads/cargo-watch/7.4.1/index.md
# Cargo Watch 7.4.1

## Release notes

<ul>
<li><a class="issue-link js-issue-link" data-error-text="Failed to load title" data-id="631482106" data-permission-text="Title is private" data-url="https://github.com/watchexec/cargo-watch/issues/149" data-hovercard-type="issue" data-hovercard-url="/watchexec/cargo-watch/issues/149/hovercard" href="https://github.com/watchexec/cargo-watch/issues/149">#149</a>: if watched directory didn't contain a .git folder, thread would block (infinite loop)</li>
<li>Also, #BlackLivesMatter. Closer to home, #ArmsDownNZ (police here wants to arm up, fuck that). Over the pond, #AboriginalLivesMatter. #JunkTerrorBill a bit further away, and spare a thought for Hong Kong, which has been fighting since March last year! I'm not comfortable stating that on Watchexec (which I also maintain and is released concurrently) given it's not, originally, my project, but here I can.</li>
</ul>

## Packages

<table class="downloads">
<thead>
<tr>
<th>OS</th>
<th>Arch</th>
<th>Variant</th>
<th>Download</th>

</tr>
</thead>
<tbody>
<tr>
						<td rowspan="3">Linux</td>
						
<td rowspan="3">x86-64</td>
            
						
<td rowspan="2">glibc</td>
            
<td><a class="download" href="https://github.com/watchexec/cargo-watch/releases/download/v7.4.1/cargo-watch-v7.4.1-x86_64-unknown-linux-gnu.deb">DEB</a> (629 KB)</td>
						
</tr>
					
<tr>
						
						
						
<td><a class="download" href="https://github.com/watchexec/cargo-watch/releases/download/v7.4.1/cargo-watch-v7.4.1-x86_64-unknown-linux-gnu.tar.xz">XZ</a> (631 KB)</td>
						
</tr>
					
<tr>
						
						
						
<td rowspan="1">musl</td>
            
<td><a class="download" href="https://github.com/watchexec/cargo-watch/releases/download/v7.4.1/cargo-watch-v7.4.1-x86_64-unknown-linux-musl.tar.xz">XZ</a> (647 KB)</td>
						
</tr>
					
<tr>
						<td rowspan="2">Windows</td>
						
<td rowspan="2">x86-64</td>
            
						
<td rowspan="1">MSVC</td>
            
<td><a class="download" href="https://github.com/watchexec/cargo-watch/releases/download/v7.4.1/cargo-watch-v7.4.1-x86_64-pc-windows-msvc.zip">Zip</a> (772 KB)</td>
						
</tr>
					
<tr>
						
						
						
<td rowspan="1">MingW</td>
            
<td><a class="download" href="https://github.com/watchexec/cargo-watch/releases/download/v7.4.1/cargo-watch-v7.4.1-x86_64-pc-windows-gnu.zip">Zip</a> (800 KB)</td>
						
</tr>
					
<tr>
						<td rowspan="1">macOS</td>
						
<td rowspan="1">x86-64</td>
            
						
<td rowspan="1"></td>
            
<td><a class="download" href="https://github.com/watchexec/cargo-watch/releases/download/v7.4.1/cargo-watch-v7.4.1-x86_64-apple-darwin.tar.xz">XZ</a> (577 KB)</td>
						
</tr>
					</tbody>
</table>


View release [on GitHub](https://github.com/watchexec/cargo-watch/releases/v7.4.1).

## Checksums





>	 version released on 2020-06-06
>	|
>	this page built on 2022-02-19 at 03:29
>	| generator v0.0.2
>	| [json metadata](meta.json)

